<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey3">

    <TextView
        android:id="@+id/tvQuestion1ID"
        android:layout_width="308dp"
        android:layout_height="129dp"
        android:layout_marginTop="100dp"
        android:text="@string/third_question"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion1ID">

        <RadioButton
            android:id="@+id/rb_alwaysID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/always" />

        <RadioButton
            android:id="@+id/rb_usuallyID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usually" />

        <RadioButton
            android:id="@+id/rb_aboutID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />
        <RadioButton
            android:id="@+id/rb_rarely2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rarely" />
    </RadioGroup>

    <Button
        android:id="@+id/bFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onclick"
        android:text="@string/finalize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>