<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey1">

    <TextView
        android:id="@+id/tvQuestion1ID"
        android:layout_width="308dp"
        android:layout_height="129dp"
        android:layout_marginTop="100dp"
        android:text="@string/first_question"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion1ID">

        <RadioButton
            android:id="@+id/rb_agreeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_agree" />

        <RadioButton
            android:id="@+id/rb_agree2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree" />

        <RadioButton
            android:id="@+id/rb_neutralID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neutral" />

        <RadioButton
            android:id="@+id/rb_disagreeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disagree" />
    </RadioGroup>

    <Button
        android:id="@+id/bFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onclick"
        android:text="@string/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>